@@ -1,0 +1,22 @@
+---
+title: Underscore sugar
+inMenu: true
+---
+h2. Underscore sugar
+
+If you feel that the various dots hurt your eyes and is not very 'rubyish',
+you can replace your dots with underscores, so that instead of saying
+
+<ruby>
+lambda { 1.should.not.equal 1 }.should.raise
+</ruby>
+
+you can say
+
+<ruby>
+lambda { 1.should_not_equal 1 }.should_raise
+</ruby>
+
+as long as you run the specs with the <tt>--sweet</tt> option (sugar is sweet).
+
+This applies to regular Ruby objects as well as mocks.
